fix: button vertical align

--- a/src/components/Button/index.less
+++ b/src/components/Button/index.less
@@ -33,10 +33,8 @@
         text-overflow: ellipsis;
         word-break: break-word;
         white-space: nowrap;
-        display: flex;
-        flex-direction: row;
-        height: 100%;
-        align-items: center;
+        display: table-cell;
+        vertical-align:middle
     }
     // default
     color: @button-default-color;
@@ -70,7 +68,7 @@
     }
 
     &-inline {
-        display: inline-block;
+        display: inline-flex;
         padding: 0 @button-h-spacing;
         vertical-align: middle;
     }
